# sketch-to-diagram

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: app.py  prompts.py  utils.py
app/components/: mermaid_viewer.py
app/prompts/: draft.py  style.py
artifacts/: flowchart.md
